<resources>
    <string name="app_name">Whisper</string>

    <!-- Common -->
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="recent_chats">Recent Chats</string>

    <!-- Api Response Errors -->
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_network">Please check your network connection</string>

    <!-- Local Errors -->
    <string name="error_reading_from_storage">Could not read internal storage</string>

    <!-- Welcome Screen -->
    <string name="get_started">Get Started</string>
    <string name="get_started_description">Free and instantaneous communication anywhere in the world. Send and receive high-fidelity messages. Start sharing the moments that matter with the people who matter to you.</string>
    <string name="welcome">Take privacy with you.\nShare your moments in every message.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <!-- Sign In Screen -->
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="continue_text">Continue</string>

    <!-- Sign Up Screen -->
    <string name="your_personal_data">Your Personal Data</string>
    <string name="your_profile">Your Profile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_username">Enter username</string>
    <string name="create_account">Create Account</string>

    <!-- Input errors -->
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_username">Username must contain at least 4 symbols</string>
    <string name="invalid_password">A password must contain at least 8 symbols</string>
    <string name="invalid_confirm_password">Passwords must match</string>

    <!-- Contacts Screen -->
    <string name="contacts">Contacts</string>
    <string name="contacts_not_found_explanation">To place a contact, tap the button below and invite a user.</string>
    <string name="invitations">Invitations</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="contact_requests">Contact Requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="pending">pending</string>
    <string name="go_to_chat">Go to Chat</string>
    <string name="delete_contact">Delete</string>
    <string name="pin_contact">Pin</string>
    <string name="unpin_contact">Unpin</string>
    <string name="mute_contact">Mute</string>
    <string name="unmute_contact">Unmute</string>
    <string name="block_contact">Block</string>

    <!-- Profile Screen -->
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="account_details">Account Details</string>
    <string name="security">Security</string>
    <string name="settings">Settings</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="hidden_contacts">Banned Contacts</string>
    <string name="muted_contacts">Muted Contacts</string>

    <!-- Recent Chats Screen -->
    <string name="no_messages">No Messages</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="nine_and_more_messages">9+</string>
    <string name="start_chat_explanation">To place a Whisper chat, tap the button below and invite a user.</string>
    <string name="invite_a_user">Invite a User</string>

    <!-- Add Contact Screen -->
    <string name="screen_title_add_contact">Add Contact</string>
    <string name="add">Add</string>
    <string name="invite_sent">Invite Sent</string>
    <string name="no_results_found">No results found.</string>
    <string name="error_title_oops">Oooops...</string>
    <string name="error_message_user_search">There was a problem searching for a user. Please try again.</string>
    <string name="add_contact">Add Contact</string>

    <!-- Error Dialogs-->
    <!-- Tittles-->
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_title_network">Network Error</string>
    <string name="error_dialog_title_try_again">Try Again</string>
    <!-- Body Message-->
    <string name="error_dialog_message_body_no_network">No internet connection found. Check your connection or try again.</string>
    <string name="error_dialog_message_body_invalid_credentials">Email or password are invalid. Please try again with valid credentials.</string>
    <string name="error_dialog_body_message_setting_personal_info">There was an error setting your personal information</string>
    <!-- General Error Messages -->
    <string name="error">Error</string>
    <string name="error_network_message">Network Error</string>
    <string name="error_something_went_wrong_try_again">Something went wrong. Please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="error_no_app_found_to_open_file">No application found to open this file.</string>

    <!-- Dialog Tittles -->
    <string name="dialog_external_storage_denied_title">Permission Denied</string>
    <string name="dialog_external_storage_grant_permission_title">Grant permission</string>

    <!-- Dialog Bodies-->
    <string name="dialog_external_storage_denied_body">In order to set your profile picture, we need access to your photos.</string>
    <string name="dialog_external_storage_grant_permission_body">In order to set your profile picture, we need access to your photos.</string>

    <!-- Attachments -->
    <string name="attachment_photos">Photos</string>
    <string name="attachment_gif">GIF</string>
    <string name="attachment_file">File</string>
    <string name="attachment_location">Location</string>

    <!-- Documents Types -->
    <string name="document_type_pdf">PDF Document</string>
    <string name="document_type_doc">DOC Document</string>
    <string name="document_type_xls">XLS Document</string>
    <string name="document_type_pptx">PPTX Document</string>
    <string name="document_type_file">File Document</string>

    <!-- Chat Messages -->
    <string name="chat_status_sending">Sending</string>
    <string name="chat_status_delivered">Delivered</string>
    <string name="chat_status_read">Read</string>
</resources>